// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutSpacer /> should render a layout spacer with no spacing sizes defined 1`] = `
<LayoutSpacer
  contentItems={
    Array [
      Object {
        "content": <div>
          a
        </div>,
      },
      Object {
        "content": <div>
          b
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="layout_spacer"
  >
    <styled.div
      data-component-type="layout_spacer_item"
      key="0"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "gnONOD",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="gnONOD"
          data-component-type="layout_spacer_item"
        >
          <div>
            a
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="1"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "gnONOD",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="gnONOD"
          data-component-type="layout_spacer_item"
        >
          <div>
            b
          </div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</LayoutSpacer>
`;

exports[`<LayoutSpacer /> should render a layout spacer with null content 1`] = `
<LayoutSpacer
  contentItems={
    Array [
      Object {
        "content": null,
        "spacingSize": "medium",
      },
      Object {
        "content": <div>
          a
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="layout_spacer"
  >
    <styled.div
      data-component-type="layout_spacer_item"
      key="1"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "gnONOD",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="gnONOD"
          data-component-type="layout_spacer_item"
        >
          <div>
            a
          </div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</LayoutSpacer>
`;

exports[`<LayoutSpacer /> should render a layout spacer with varying spacing sizes 1`] = `
<LayoutSpacer
  contentItems={
    Array [
      Object {
        "content": <div>
          a
        </div>,
        "spacingSize": "small",
      },
      Object {
        "content": <div>
          b
        </div>,
        "spacingSize": "medium",
      },
      Object {
        "content": <div>
          c
        </div>,
        "spacingSize": "large",
      },
      Object {
        "content": <div>
          d
        </div>,
        "spacingSize": "xlarge",
      },
      Object {
        "content": <div>
          e
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="layout_spacer"
  >
    <styled.div
      data-component-type="layout_spacer_item"
      key="0"
      spacingSize="small"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "gnONOD",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="small"
      >
        <div
          className="cbhFJr"
          data-component-type="layout_spacer_item"
        >
          <div>
            a
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="1"
      spacingSize="medium"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "gnONOD",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="medium"
      >
        <div
          className="kRfGsK"
          data-component-type="layout_spacer_item"
        >
          <div>
            b
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="2"
      spacingSize="large"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "gnONOD",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="large"
      >
        <div
          className="bNxmnL"
          data-component-type="layout_spacer_item"
        >
          <div>
            c
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="3"
      spacingSize="xlarge"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "gnONOD",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="xlarge"
      >
        <div
          className="dVyoip"
          data-component-type="layout_spacer_item"
        >
          <div>
            d
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="4"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "gnONOD",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="gnONOD"
          data-component-type="layout_spacer_item"
        >
          <div>
            e
          </div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</LayoutSpacer>
`;
